--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  </head>
   <header>
 	<div id="hd">
-		<img src="img/header.Gif" width="100%"alt="hd_bg" style="border-radius:10px;">
+		<img src="img/header.GIF" width="100%"alt="hd_bg" style="border-radius:10px;">
 	</div>
 	<div id="hd_title">
 		<div id="logo">
