--- a/index.html
+++ b/index.html
@@ -2,37 +2,69 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	 <!-- <link rel="stylesheet" href="css/bootstrap.css">
+	 <script src="js/jquery.min.js"></script>
+	 <script src="js/popper.min.js"></script>
+	 <script src="js/bootstrap.min.js"></script> -->
   <title>阿花的个人主页</title>
+  <link rel="stylesheet" href="boot.css">
   <link rel="stylesheet" href="index.css">
   <style>
-	
+	body{
+		background:#E0F5FF;
+	}
+	#main{
+		position:absolute;
+		width:60%;
+		top:700px;
+		left:20%;
+		margin:0 auto;
+		padding:20px;
+	}
+	#main>div{
+		margin-top:50px;
+		width:100%;
+		height:500px;
+		border:2px solid #B2B2B2;
+		border-radius:5px;
+		}
+	a{
+		display:block;
+		width:100%;
+		height:100%;
+	}
   </style>
  </head>
-  <header>
-	<div id="hd">
-<<<<<<< HEAD
-		<img src="img/header.GIF" width="100%" alt="hd_bg">
-=======
-		<img src="img/header.GIF" width="100%"alt="hd_bg" style="border-radius:10px;">
->>>>>>> 38ad7754cfdcf019db5e3c56f835f86f2354dfd2
-	</div>
-	<div id="hd_title">
-		<div id="logo">
-			<img src="img/portrait.jpg" width="180px" height="180px"; alt="portrait">
-		</div>
-		<div id="title">
-			<h3>欢迎访问阿花的个人主页</h3>
-			<ul id="nav">
-				<li style="padding-left:0px"><a href="#">导航1</a></li>
-				<li><a href="#">导航2</a></li>
-				<li><a href="#">导航3</a></li>
-			</ul>
-		</div>
-		<div id="h_r"></div>
-		<div><button id="support">I need your support</button></div>
-	</div>
-  </header>
  <body>
-	
+	<header>
+		<div id="hd">
+			<img src="img/header.GIF" width="100%" alt="hd_bg">
+		</div>
+		<div id="hd_title">
+			<div id="logo">
+				<img src="img/portrait.jpg" width="180px" height="180px"; alt="portrait">
+			</div>
+			<div id="title">
+				<h3>欢迎访问阿花的个人主页</h3>
+				<ul id="nav">
+					<li style="padding-left:0px"><a href="#">导航1</a></li>
+					<li><a href="#">导航2</a></li>
+					<li><a href="#">导航3</a></li>
+				</ul>
+			</div>
+			<div id="h_r"></div>
+			<div><button id="support">I need your support</button></div>
+		</div>
+	</header>
+	<div id="main" align="center">
+		<div><a href="#"></a></div>
+		<div><a href="#"></a></div>
+		<div><a href="#" style="margin-bottom:50px;"></a></div>
+	</div>
+	<footer>
+		<div>
+		</div>
+	</footer>
  </body>
 </html>
